# Homework26

./: .env.example  main.py  pyproject.toml
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 1f7e77edccbf_add_field_confirmed.py  6ecacf31e06b_init.py  94276da877b1_add_fields.py  b77cc0e07f29_add_role_of_user.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16392  16398  16399  16401  16402  16403  16404  16405  16407  16413  16414  16416  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  (+11 more)
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
postgres-data/pg_xact/: 0000
src/: schemas.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  cloud_image.py  email.py  role.py
static/: styles.css
static/client/: index.html  main.html
static/client/css/: style.css
static/client/js/: app.js  main.js
templates/: index.html
tests/: conftest.py  test.db  test_route_auth.py  test_route_contacts.py  test_route_user.py  test_unit_repository_contacts.py
